--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,12 +1,11 @@
-html {
-    min-height: 100vh;
+html, body {
+    margin: 0;
+    height: 100%;
+    min-height: 100%;
 }
 body {
-    min-height: 100vh;
-    height: 100vh;
-    margin: 0;
     display: flex;
-    align-items: center;
+    align-items: strech;
     justify-content: center;
     font-family: roboto, arial, sans-serif;
     background-color: #f5f5f5;
